[tool.poetry]
name = "fin-streamlit"
version = "0.1.0"
description = "Financial dashboards"
authors = ["jp <plutakuba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
chardet = "^5.2.0"
pandas = "^2.1.1"
plotly = "^5.17.0"
streamlit = "^1.27.2"
numpy = "^1.26.1"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
